fix: fix editor overflow and style

--- a/packages/editor/src/browser/editor.module.less
+++ b/packages/editor/src/browser/editor.module.less
@@ -120,6 +120,7 @@
       }
       div {
         white-space: nowrap;
+        height: 19px;
       }
       .subname{
         color:  @kt-ui-font-color3;
